--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,6 @@ readme = "package.rst"
 
 
 
-
 keywords = [
     "direct current resistivity",
     "earth science",
@@ -64,42 +63,58 @@ include = [
     { path = "docs/**/THIRD_PARTY_SOFTWARE.rst" },
 ]
 
+[project.urls]
+repository = "https://github.com/MiraGeoscience/simpeg-drivers"
+documentation = "https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/"
+homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
+
+[tool.poetry.dependencies]
+python = "^3.10"
+
+# note: py-deps-clock defines custom mapping from dask to dask-core
+dask = ">=2025.3, <2025.4.dev"  # also in simpeg[dask]
+
+discretize = "0.11.*"  # also in simpeg, octree-creation-app
+distributed = ">=2025.3, <2025.4.dev"  # for dask[distributed]
+numpy = "~1.26.0" # also in geoh5py, simpeg
+pydantic = "^2.5.2"  # also in geoh5py, curve-apps, geoapps-utils
+Rtree = "~1.2.0"
+scikit-learn = "~1.4.0"
+scipy = "~1.14.0"
+tqdm = "^4.66.1"
+trimesh = "~4.1.3"
+
+# solvers for simpeg: not imported, but at least one required at runtime
+pydiso = ">=0.1.0, <0.2.dev"
+python-mumps = ">=0.0.3, <0.0.4.dev"
 
 
-dependencies = [
-    # note: py-deps-clock defines custom mapping from dask to dask-core
-    "dask >=2025.3, <2025.4.dev",  # also in simpeg[dask]
-    "discretize ==0.11.*",  # also in simpeg, octree-creation-app
-    "distributed >=2025.3, <2025.4.dev",  # for dask[distributed]
-    "numpy ~=1.26.0",  # also in geoh5py, simpeg
-    "pydantic >=2.5.2,<3.0.0",  # also in geoh5py, curve-apps, geoapps-utils
-    "Rtree ~=1.2.0",
-    "scikit-learn ~=1.4.0",
-    "scipy ~=1.14.0",
-    "tqdm >=4.66.1,<5.0.0",
-    "trimesh ~=4.1.3",
+## Pip dependencies from Git repositories
+#----------------------------------------
+#geoh5py = {version = ">=0.12.0a, <0.13.dev", source = "pypi", allow-prereleases = true}
+geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "develop"}
 
-    # solvers for simpeg: not imported, but at least one required at runtime
-    "pydiso >=0.1.0, <0.2.dev",
-    "python-mumps >=0.0.3, <0.0.4.dev",
+#octree-creation-app = {version = ">=0.4.0a, <0.5.dev", source = "pypi", allow-prereleases = true}
+octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", rev = "develop"}
 
-    ## Pip dependencies from Git repositories
-    #----------------------------------------
-    # "geoh5py >=0.12.0a, <0.13.dev",  # source = "pypi", allow-prereleases = true
-    "geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@develop",
+#geoapps-utils = {version = ">=0.6.0a, <0.7.dev", source = "pypi", allow-prereleases = true}
+geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "develop"}
 
-    # "octree-creation-app >=0.4.0a, <0.5.dev",  # source = "pypi", allow-prereleases = true
-    "octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@develop",
+#mira-simpeg = {version = ">=0.23.0.1b1, <0.23.1.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
+mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "develop", extras = ["dask"]}
 
-    # "geoapps-utils >=0.6.0a, <0.7.dev",  # source = "pypi", allow-prereleases = true
-    "geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@develop",
+#param-sweeps = {version = ">=0.3.0a, <0.4.dev", source = "pypi", allow-prereleases = true}
+param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "develop"}
 
-    # "mira-simpeg >=0.23.0.1b1, <0.23.1.dev",  # source = "pypi", allow-prereleases = true, extras = ["dask"]
-    "mira-simpeg[dask] @ git+https://github.com/MiraGeoscience/simpeg.git@develop",
-
-    # "param-sweeps >=0.3.0a, <0.4.dev",  # source = "pypi", allow-prereleases = true
-    "param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@develop"
-]
+## about pip dependencies
+# to be specified to work with conda-lock
+# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
+# - from Artifactory : my_package = { version = "1.2.3" }
+# - from URL: !!! no actual lock, as tag or branch can move and installation will fetch current !!!
+#   - for a tag:    my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/TAG.tar.gz" }
+#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.tar.gz" }
+# - to actually lock on a revision: my_package = { git = "https://github.com/ORGANISATION/REPO.git", rev = "GIT_REV" }
+#   (where rev value is a tag, a branch name or a commit hash). Can also use ``branch`` or ``tag`` instead of ``rev``
 
 [tool.poetry.group.dev.dependencies]
 Pygments = "*"
@@ -164,15 +179,6 @@ select = [
     "UP",  # pyupgrade
     "W",  # pycodestyle warnings
 ]
-
-
-
-[project.urls]
-repository = "https://github.com/MiraGeoscience/simpeg-drivers"
-documentation = "https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/"
-homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
-
-
 
 [tool.ruff.lint.mccabe]
 max-complexity = 18
