--- a/environments/py-3.11-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.11-linux-64-dev.conda.lock.yml
@@ -15,7 +15,7 @@ dependencies:
   - argon2-cffi-bindings=21.2.0=py311h9ecbd09_5
   - arrow=1.3.0=pyhd8ed1ab_1
   - asciitree=0.3.3=py_2
-  - astroid=3.3.10=py311h38be061_0
+  - astroid=3.3.11=py311h38be061_0
   - asttokens=3.0.0=pyhd8ed1ab_1
   - async-lru=2.0.5=pyh29332c3_0
   - attrs=25.3.0=pyh71513ae_0
@@ -29,23 +29,23 @@ dependencies:
   - brotli-python=1.1.0=py311hfdbb021_3
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.7.9=hbd8a1cb_0
+  - ca-certificates=2025.7.14=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.7.9=pyhd8ed1ab_0
+  - certifi=2025.7.14=pyhd8ed1ab_0
   - cffi=1.17.1=py311hf29c0ef_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.2.1=pyh707e725_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_1
-  - comm=0.2.2=pyhd8ed1ab_1
+  - comm=0.2.3=pyhe01879c_0
   - contourpy=1.3.2=py311hd18a35c_0
-  - coverage=7.9.2=py311h2dc5d0c_0
+  - coverage=7.10.0=py311h3778330_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py311h9ecbd09_0
   - dask-core=2025.3.0=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.14=py311hfdbb021_0
+  - debugpy=1.8.15=py311hc665b79_0
   - decorator=5.2.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - deprecated=1.2.18=pyhd8ed1ab_0
@@ -56,16 +56,16 @@ dependencies:
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.5=py311h2dc5d0c_0
+  - fonttools=4.59.0=py311h3778330_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=ha770c72_1
-  - fsspec=2025.5.1=pyhd8ed1ab_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py311h5b7b71f_0
   - greenlet=3.2.3=py311hfdbb021_0
   - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.14.0=nompi_py311h7f87ba5_100
-  - hdf5=1.14.6=nompi_h6e4c0c1_102
+  - hdf5=1.14.6=nompi_h6e4c0c1_103
   - hpack=4.1.0=pyhd8ed1ab_0
   - httpcore=1.0.9=pyh29332c3_0
   - httpx=0.28.1=pyhd8ed1ab_0
@@ -75,7 +75,6 @@ dependencies:
   - imagesize=1.4.1=pyhd8ed1ab_0
   - importlib-metadata=8.7.0=pyhe01879c_1
   - importlib_metadata=8.7.0=h40b2b14_1
-  - importlib_resources=6.5.2=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - ipykernel=6.29.5=pyh3099207_0
   - ipython=9.4.0=pyhfa0c392_0
@@ -89,18 +88,18 @@ dependencies:
   - joblib=1.5.1=pyhd8ed1ab_0
   - json5=0.12.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py311h38be061_1
-  - jsonschema=4.24.0=pyhd8ed1ab_0
+  - jsonschema=4.25.0=pyhe01879c_0
   - jsonschema-specifications=2025.4.1=pyh29332c3_0
-  - jsonschema-with-format-nongpl=4.24.0=hd8ed1ab_0
+  - jsonschema-with-format-nongpl=4.25.0=he01879c_0
   - jupyter-book=1.0.3=pyhd8ed1ab_1
   - jupyter-cache=1.0.1=pyhff2d567_0
-  - jupyter-lsp=2.2.5=pyhe01879c_2
+  - jupyter-lsp=2.2.6=pyhe01879c_0
   - jupyter_client=8.6.3=pyhd8ed1ab_1
   - jupyter_core=5.8.1=pyh31011fe_0
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.16.0=pyhe01879c_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.4.4=pyhd8ed1ab_0
+  - jupyterlab=4.4.5=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
@@ -108,6 +107,7 @@ dependencies:
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.8=py311hd18a35c_1
   - krb5=1.21.3=h659f571_0
+  - lark=1.2.2=pyhd8ed1ab_1
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.17=h717163a_0
   - ld_impl_linux-64=2.44=h1423503_1
@@ -123,7 +123,7 @@ dependencies:
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
-  - libexpat=2.7.0=h5888daf_0
+  - libexpat=2.7.1=hecca717_0
   - libffi=3.4.6=h2dba641_1
   - libfreetype=2.13.3=ha770c72_1
   - libfreetype6=2.13.3=h48d6fc4_1
@@ -131,7 +131,7 @@ dependencies:
   - libgcc-ng=15.1.0=h69a702a_3
   - libgfortran=15.1.0=h69a702a_3
   - libgfortran5=15.1.0=hcea5267_3
-  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libhwloc=2.11.2=default_h3d81e11_1002
   - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=32_hc41d3b0_mkl
@@ -142,7 +142,7 @@ dependencies:
   - libscotch=7.0.6=hea33c07_1
   - libsodium=1.0.20=h4ab18f5_0
   - libspatialindex=2.0.0=he02047a_0
-  - libsqlite=3.50.2=hee844dc_2
+  - libsqlite=3.50.3=hee844dc_1
   - libssh2=1.11.1=hcf80075_0
   - libstdcxx=15.1.0=h8f9b012_3
   - libstdcxx-ng=15.1.0=h4852527_3
@@ -154,7 +154,7 @@ dependencies:
   - libxml2=2.13.8=h4bc477f_0
   - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.7=h024ca30_0
+  - llvm-openmp=20.1.8=h4922eb0_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py311h2dc5d0c_1
@@ -165,12 +165,12 @@ dependencies:
   - mdurl=0.1.2=pyhd8ed1ab_1
   - metis=5.1.0=hd0bcaf9_1007
   - mistune=3.1.3=pyh29332c3_0
-  - mkl=2024.2.2=ha957f24_16
+  - mkl=2024.2.2=ha770c72_16
   - msgpack-python=1.1.1=py311hd18a35c_0
   - mumps-include=5.7.3=h82cca05_10
   - mumps-seq=5.7.3=h06cbf8f_10
   - munkres=1.1.4=pyhd8ed1ab_1
-  - myst-nb=1.2.0=pyh29332c3_0
+  - myst-nb=1.3.0=pyhe01879c_0
   - myst-parser=1.0.0=pyhd8ed1ab_0
   - nbclient=0.10.2=pyhd8ed1ab_0
   - nbconvert=7.16.6=hb482800_0
@@ -196,7 +196,6 @@ dependencies:
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py311h82a398c_1
   - pip=25.1.1=pyh8b19718_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.8=pyhe01879c_0
   - pluggy=1.6.0=pyhd8ed1ab_0
   - prometheus_client=0.22.1=pyhd8ed1ab_0
@@ -225,7 +224,7 @@ dependencies:
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-mumps=0.0.3=py311h4b558b0_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.11=7_cp311
+  - python_abi=3.11=8_cp311
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py311h2dc5d0c_2
   - pyzmq=27.0.0=py311h7deb3e3_0
@@ -235,13 +234,14 @@ dependencies:
   - requests=2.32.4=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_1
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - rfc3987-syntax=1.1.0=pyhe01879c_1
   - rpds-py=0.26.0=py311hdae7d1d_0
   - rtree=1.2.0=py311ha1603b9_1
   - scikit-learn=1.4.2=py311he08f58d_1
   - scipy=1.14.1=py311he9a78e4_2
   - send2trash=1.8.3=pyh0d859eb_1
   - setuptools=80.9.0=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
+  - six=1.17.0=pyhe01879c_1
   - sniffio=1.3.1=pyhd8ed1ab_1
   - snowballstemmer=3.0.1=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
@@ -309,8 +309,8 @@ dependencies:
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@c64e2db54bfdacc19ef675a7d54288aaad8b78a8
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@87f68c3a25cb3fac2a4c9de8c0d74ec4e58d0963
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@86e22e6fa457859d494d94552e6431728e513d7a
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@53f7981670df120297945a4c3c1f7fce74f5ed3a
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@01a7068fdab7fba8695ad371c9fd9164760a09df
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
