--- a/environments/py-3.11-linux-64.conda.lock.yml
+++ b/environments/py-3.11-linux-64.conda.lock.yml
@@ -15,10 +15,10 @@ dependencies:
   - brotli-python=1.1.0=py311hfdbb021_3
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.7.9=hbd8a1cb_0
+  - ca-certificates=2025.7.14=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.7.9=pyhd8ed1ab_0
+  - certifi=2025.7.14=pyhd8ed1ab_0
   - cffi=1.17.1=py311hf29c0ef_0
   - click=8.2.1=pyh707e725_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
@@ -31,13 +31,13 @@ dependencies:
   - discretize=0.11.3=py311h5b7b71f_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.5=py311h2dc5d0c_0
+  - fonttools=4.59.0=py311h3778330_0
   - freetype=2.13.3=ha770c72_1
-  - fsspec=2025.5.1=pyhd8ed1ab_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py311h5b7b71f_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.14.0=nompi_py311h7f87ba5_100
-  - hdf5=1.14.6=nompi_h6e4c0c1_102
+  - hdf5=1.14.6=nompi_h6e4c0c1_103
   - hpack=4.1.0=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - icu=75.1=he02047a_0
@@ -61,7 +61,7 @@ dependencies:
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
-  - libexpat=2.7.0=h5888daf_0
+  - libexpat=2.7.1=hecca717_0
   - libffi=3.4.6=h2dba641_1
   - libfreetype=2.13.3=ha770c72_1
   - libfreetype6=2.13.3=h48d6fc4_1
@@ -69,7 +69,7 @@ dependencies:
   - libgcc-ng=15.1.0=h69a702a_3
   - libgfortran=15.1.0=h69a702a_3
   - libgfortran5=15.1.0=hcea5267_3
-  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libhwloc=2.11.2=default_h3d81e11_1002
   - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=32_hc41d3b0_mkl
@@ -79,7 +79,7 @@ dependencies:
   - libpng=1.6.50=h943b412_0
   - libscotch=7.0.6=hea33c07_1
   - libspatialindex=2.0.0=he02047a_0
-  - libsqlite=3.50.2=hee844dc_2
+  - libsqlite=3.50.3=hee844dc_1
   - libssh2=1.11.1=hcf80075_0
   - libstdcxx=15.1.0=h8f9b012_3
   - libstdcxx-ng=15.1.0=h4852527_3
@@ -90,12 +90,12 @@ dependencies:
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.13.8=h4bc477f_0
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=20.1.7=h024ca30_0
+  - llvm-openmp=20.1.8=h4922eb0_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py311h2dc5d0c_1
   - matplotlib-base=3.8.4=py311ha4ca890_2
   - metis=5.1.0=hd0bcaf9_1007
-  - mkl=2024.2.2=ha957f24_16
+  - mkl=2024.2.2=ha770c72_16
   - msgpack-python=1.1.1=py311hd18a35c_0
   - mumps-include=5.7.3=h82cca05_10
   - mumps-seq=5.7.3=h06cbf8f_10
@@ -123,7 +123,7 @@ dependencies:
   - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-mumps=0.0.3=py311h4b558b0_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.11=7_cp311
+  - python_abi=3.11=8_cp311
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py311h2dc5d0c_2
   - readline=8.2=h8c095d6_2
@@ -131,7 +131,7 @@ dependencies:
   - scikit-learn=1.4.2=py311he08f58d_1
   - scipy=1.14.1=py311he9a78e4_2
   - setuptools=80.9.0=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
+  - six=1.17.0=pyhe01879c_1
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=hceb3a55_1
   - tblib=3.1.0=pyhd8ed1ab_0
@@ -160,8 +160,8 @@ dependencies:
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@c64e2db54bfdacc19ef675a7d54288aaad8b78a8
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@87f68c3a25cb3fac2a4c9de8c0d74ec4e58d0963
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@86e22e6fa457859d494d94552e6431728e513d7a
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@53f7981670df120297945a4c3c1f7fce74f5ed3a
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@01a7068fdab7fba8695ad371c9fd9164760a09df
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
