--- a/environments/py-3.12-win-64.conda.lock.yml
+++ b/environments/py-3.12-win-64.conda.lock.yml
@@ -14,10 +14,10 @@ dependencies:
   - brotli-bin=1.1.0=h2466b09_3
   - brotli-python=1.1.0=py312h275cf98_3
   - bzip2=1.0.8=h2466b09_7
-  - ca-certificates=2025.7.9=h4c7d964_0
+  - ca-certificates=2025.7.14=h4c7d964_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.7.9=pyhd8ed1ab_0
+  - certifi=2025.7.14=pyhd8ed1ab_0
   - cffi=1.17.1=py312h4389bb4_0
   - click=8.2.1=pyh7428d3b_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
@@ -30,13 +30,13 @@ dependencies:
   - discretize=0.11.3=py312hbaa7e33_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.5=py312h05f76fc_0
+  - fonttools=4.59.0=py312h05f76fc_0
   - freetype=2.13.3=h57928b3_1
-  - fsspec=2025.5.1=pyhd8ed1ab_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py312hbaa7e33_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.14.0=nompi_py312h6cc2a29_100
-  - hdf5=1.14.6=nompi_he30205f_102
+  - hdf5=1.14.6=nompi_he30205f_103
   - hpack=4.1.0=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - importlib-metadata=8.7.0=pyhe01879c_1
@@ -56,20 +56,20 @@ dependencies:
   - libcurl=8.14.1=h88aaa65_0
   - libdeflate=1.24=h76ddb4d_0
   - libdlf=0.3.0=pyhd8ed1ab_1
-  - libexpat=2.7.0=he0c23c2_0
+  - libexpat=2.7.1=hac47afa_0
   - libffi=3.4.6=h537db12_1
   - libfreetype=2.13.3=h57928b3_1
   - libfreetype6=2.13.3=h0b5ce68_1
   - libgcc=15.1.0=h1383e82_3
   - libgomp=15.1.0=h1383e82_3
-  - libhwloc=2.11.2=default_ha69328c_1001
+  - libhwloc=2.11.2=default_h88281d1_1002
   - libiconv=1.18=h135ad9c_1
   - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=32_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_2
   - libpng=1.6.50=h95bef1e_0
   - libspatialindex=2.0.0=h5a68840_0
-  - libsqlite=3.50.2=hf5d6505_2
+  - libsqlite=3.50.3=hf5d6505_1
   - libssh2=1.11.1=h9aa295b_0
   - libtiff=4.7.0=h05922d8_5
   - libwebp-base=1.6.0=h4d5522a_0
@@ -77,7 +77,7 @@ dependencies:
   - libxcb=1.17.0=h0e4246c_0
   - libxml2=2.13.8=h442d1da_0
   - libzlib=1.3.1=h2466b09_2
-  - llvm-openmp=20.1.7=h30eaf37_0
+  - llvm-openmp=20.1.8=hfa2b4ca_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py312h31fea79_1
   - matplotlib-base=3.8.4=py312hfee7060_2
@@ -107,14 +107,14 @@ dependencies:
   - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-mumps=0.0.3=py312h8095395_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.12=7_cp312
+  - python_abi=3.12=8_cp312
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py312h31fea79_2
   - rtree=1.2.0=py312h50e5f8f_1
   - scikit-learn=1.4.2=py312h816cc57_1
   - scipy=1.14.1=py312h337df96_2
   - setuptools=80.9.0=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
+  - six=1.17.0=pyhe01879c_1
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=h62715c5_1
   - tblib=3.1.0=pyhd8ed1ab_0
@@ -131,9 +131,9 @@ dependencies:
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py312h4389bb4_0
   - urllib3=2.5.0=pyhd8ed1ab_0
-  - vc=14.3=h41ae7f8_26
-  - vc14_runtime=14.44.35208=h818238b_26
-  - vs2015_runtime=14.44.35208=h38c0c73_26
+  - vc=14.3=h2b53caa_30
+  - vc14_runtime=14.44.35208=h818238b_30
+  - vs2015_runtime=14.44.35208=h38c0c73_30
   - wheel=0.45.1=pyhd8ed1ab_1
   - win_inet_pton=1.1.0=pyh7428d3b_8
   - wrapt=1.17.2=py312h4389bb4_0
@@ -148,8 +148,8 @@ dependencies:
   - zstd=1.5.7=hbeecb71_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@c64e2db54bfdacc19ef675a7d54288aaad8b78a8
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@87f68c3a25cb3fac2a4c9de8c0d74ec4e58d0963
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@86e22e6fa457859d494d94552e6431728e513d7a
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@53f7981670df120297945a4c3c1f7fce74f5ed3a
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@01a7068fdab7fba8695ad371c9fd9164760a09df
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
